--- a/blog/src/main/resources/application.properties
+++ b/blog/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-# spring.jpa.hibernate.ddl-auto=update
-# spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/lazydevs
-# spring.datasource.username=root
-# spring.datasource.password=Root@123
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/lazydevs
+spring.datasource.username=root
+spring.datasource.password=Root@123
+spring.jpa.properties.hibernate.check_nullability=false
 # Configure thymeleaf
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
